# RGB-D-SLAM

./: .clang-format  .gitignore  CMakeLists.txt  CylinderSegment.cpp  CylinderSegment.hpp  DepthOperations.cpp  DepthOperations.hpp  Doxyfile  Histogram.cpp  Histogram.hpp  Makefile  PlaneDetection.cpp  PlaneDetection.hpp  PlaneSegment.cpp  PlaneSegment.hpp  README.md  code_analysis.cppcheck  eig33sym.hpp  index.html  main.cpp  mainpage.md  traj_TUM_fr1_floor_2023-4-12_13:38:4.txt
Documentation/: Doxyfile
Documentation/html/: _constants_8hpp.html  _constants_8hpp_source.html  _cylinder_segment_8cpp.html  _cylinder_segment_8hpp.html  _cylinder_segment_8hpp_source.html  _depth_map_segmentation_8cpp.html  _depth_map_segmentation_8hpp.html  _depth_map_segmentation_8hpp_source.html  _depth_operations_8cpp.html  _depth_operations_8hpp.html  _depth_operations_8hpp_source.html  _histogram_8cpp.html  _histogram_8hpp.html  _histogram_8hpp_source.html  _image___features___handler_8cpp.html  _image___features___handler_8hpp.html  _image___features___handler_8hpp_source.html  _image___features___struct_8cpp.html  _image___features___struct_8hpp.html  _image___features___struct_8hpp_source.html  _local_map_8cpp.html  _local_map_8hpp.html  _local_map_8hpp_source.html  _monocular_depth_map_8cpp.html  _monocular_depth_map_8hpp.html  _monocular_depth_map_8hpp_source.html  _motion_model_8cpp.html  _motion_model_8hpp.html  _motion_model_8hpp_source.html  _p_n_p_solver_8cpp.html  _p_n_p_solver_8hpp.html  _p_n_p_solver_8hpp_source.html  _parameters_8cpp.html  _plane_segment_8cpp.html  _plane_segment_8hpp.html  _plane_segment_8hpp_source.html  _pose_8hpp.html  _pose_8hpp_source.html  _pose_utils_8cpp.html  (+58 more)
cmake/: runTests.cmake
code_analysis-cppcheck-build-dir/: angle_utils.a1  angle_utils.s1  camera_transformation.a1  camera_transformation.s1  covariances.a1  covariances.s1  cylinder_segment.a1  cylinder_segment.s1  depth_map_transformation.a1  depth_map_transformation.s1  distance_utils.a1  distance_utils.s1  files.txt  histogram.a1  histogram.s1  kalman_filter.a1  kalman_filter.s1  keypoint_detection.a1  keypoint_detection.s1  keypoint_handler.a1  keypoint_handler.s1  lastResults.xml  levenberg_marquard_functors.a1  levenberg_marquard_functors.s1  line_detection.a1  line_detection.s1  local_map.a1  local_map.s1  logger.a1  logger.s1  map_point.a1  map_point.s1  map_writer.a1  map_writer.s1  motion_model.a1  motion_model.s1  parameters.a1  parameters.s1  plane_segment.a1  plane_segment.s1  (+13 more)
examples/: TUM_parser.hpp  configuration_example.yaml  freiburg_parser.hpp  main_CAPE.cpp  main_TUM.cpp  main_freiburg1.cpp  main_freiburg1_desk_dataset.cpp  main_freiburg1_rotation_dataset.cpp  main_freiburg1_xyz_dataset.cpp  main_freiburg2.cpp  main_tunnel_dataset.cpp  main_xyz_dataset.cpp  main_yoga_mat_dataset.cpp
html/: _constants_8hpp.html  _constants_8hpp_source.html  _cylinder_segment_8cpp.html  _cylinder_segment_8hpp.html  _cylinder_segment_8hpp_source.html  _depth_map_segmentation_8cpp.html  _depth_map_segmentation_8hpp.html  _depth_map_segmentation_8hpp_source.html  _depth_operations_8cpp.html  _depth_operations_8hpp.html  _depth_operations_8hpp_source.html  _histogram_8cpp.html  _histogram_8hpp.html  _histogram_8hpp_source.html  _image___features___handler_8cpp.html  _image___features___handler_8hpp.html  _image___features___handler_8hpp_source.html  _image___features___struct_8cpp.html  _image___features___struct_8hpp.html  _image___features___struct_8hpp_source.html  _key_point_detection_8cpp.html  _key_point_detection_8hpp.html  _key_point_detection_8hpp_source.html  _levenberg_marquard_functors_8cpp.html  _levenberg_marquard_functors_8hpp.html  _levenberg_marquard_functors_8hpp_source.html  _local_map_8cpp.html  _local_map_8hpp.html  _local_map_8hpp_source.html  _monocular_depth_map_8cpp.html  _monocular_depth_map_8hpp.html  _monocular_depth_map_8hpp_source.html  _motion_model_8cpp.html  _motion_model_8hpp.html  _motion_model_8hpp_source.html  _p_n_p_solver_8cpp.html  _p_n_p_solver_8hpp.html  _p_n_p_solver_8hpp_source.html  _parameters_8cpp.html  _plane_segment_8cpp.html  (+581 more)
latex/: _constants_8hpp.tex  _constants_8hpp_source.tex  _cylinder_segment_8cpp.tex  _cylinder_segment_8hpp.tex  _cylinder_segment_8hpp_source.tex  _depth_map_segmentation_8cpp.tex  _depth_map_segmentation_8hpp.tex  _depth_map_segmentation_8hpp_source.tex  _depth_operations_8cpp.tex  _depth_operations_8hpp.tex  _depth_operations_8hpp_source.tex  _histogram_8cpp.tex  _histogram_8hpp.tex  _histogram_8hpp_source.tex  _image___features___handler_8cpp.tex  _image___features___handler_8hpp.tex  _image___features___handler_8hpp_source.tex  _image___features___struct_8cpp.tex  _image___features___struct_8hpp.tex  _image___features___struct_8hpp_source.tex  _key_point_detection_8cpp.tex  _key_point_detection_8hpp.tex  _key_point_detection_8hpp_source.tex  _levenberg_marquard_functors_8cpp.tex  _levenberg_marquard_functors_8hpp.tex  _levenberg_marquard_functors_8hpp_source.tex  _local_map_8cpp.tex  _local_map_8hpp.tex  _local_map_8hpp_source.tex  _monocular_depth_map_8cpp.tex  _monocular_depth_map_8hpp.tex  _monocular_depth_map_8hpp_source.tex  _motion_model_8cpp.tex  _motion_model_8hpp.tex  _motion_model_8hpp_source.tex  _p_n_p_solver_8cpp.tex  _p_n_p_solver_8hpp.tex  _p_n_p_solver_8hpp_source.tex  _parameters_8cpp.tex  _plane_segment_8cpp.tex  (+451 more)
src/: CylinderSegment.cpp  CylinderSegment.hpp  DepthOperations.cpp  Histogram.cpp  Histogram.hpp  MonocularDepthMap.cpp  MonocularDepthMap.hpp  PlaneDetection.cpp  PlaneDetection.hpp  PlaneSegment.cpp  PlaneSegment.hpp  Point_Tracking.cpp  Point_Tracking.hpp  Pose_Optimisation.cpp  Pose_Optimisation.hpp  README.md  RGBD_SLAM.cpp  RGBD_SLAM.hpp  RGB_Slam.cpp  RGB_Slam.hpp  matches_containers.hpp  parameters.cpp  parameters.hpp  rgbd_slam.cpp  rgbd_slam.hpp  types.hpp
tests/: README.md  pose_optimization_test.cpp  test_coordinate_systems.cpp  test_kalman_filtering.cpp  test_motion_model.cpp  test_polygons.cpp  test_pose_optimization.cpp  test_tracking.cpp  test_tracking_algos.cpp
(+448 files in other folders)
